Indents properly (I hope...) and sets the frame for the presentation.

--- a/presentation/implementation.tex
+++ b/presentation/implementation.tex
@@ -1,25 +1,25 @@
 \section<presentation>[Implémentation]{Implémentation}
+  \subsection{Organisation du programme}
 
-\subsection{Organisation du programme}
+    \begin{frame}
+      \frametitle{aaaaaaaaaaa}
+        3) notre urlfilter, les choix que nous avons fait (et pourquoi), et
+        par exemple expliquer ce que permet la libnetfiter--conntrack.
+        \begin{itemize}
+          \item<1-> b
+          \item<2-> c
+          \item<3-> d
+        \end{itemize}
 
-\begin{frame}
- \frametitle{aaaaaaaaaaa}
+        \vspace{0.5cm}
+        \onslide<4>
+        \begin{center}
+          \begin{Large}
+            \textcolor{blue}{e.}
+          \end{Large}
+        \end{center}
+    \end{frame}
 
-\begin{itemize}
-\item<1-> b
-\item<2-> c
-\item<3-> d
-\end{itemize}
+  \subsection{Fonctionnement du logiciel}
 
-\vspace{0.5cm}
-\onslide<4>
-\begin{center}
-\begin{Large}
-\textcolor{blue}{e.}
-\end{Large}
-\end{center}
-\end{frame}
-
-\subsection{Fonctionnement du logiciel}
-
-\subsection{Quelques remarques et comparaisons avec l7-filter}
+  \subsection{Quelques remarques et comparaisons avec l7-filter}
