--- a/trunk/presentation/implementation.tex
+++ b/trunk/presentation/implementation.tex
@@ -1,25 +1,58 @@
 \section<presentation>[Implémentation]{Implémentation}
-  \subsection{Organisation du programme}
+  \begin{frame}
+    \frametitle{Organisation du programme}
+      Le programme contient :
+      \begin{itemize}
+        \item un \texttt{README} très complet ;
+        \item un répertoire base, regroupant plusieurs librairies externes (sous licences compatibles GPLv2) ;
+        \item un fichier de configuration ;
+        \item \texttt{queue.h/cc}, \texttt{packet.h/cc} et \texttt{conntrack.h/cc} qui réalisent l'interception des paquets envoyés à
+        \texttt{NFQUEUE} (\texttt{queue.cc}), leur interprétation (\texttt{packet.cc}), et leur mise en relation avec un conntrack
+        (\texttt{conntrack.cc}) ;
+        \item \texttt{classifier.h/cc} qui sert à classer les paquets ;
+        \item un fichier de base permettant le lancement des threads, un autre parsant le fichier de configuration et
+        initialisant le classifier.
+      \end{itemize}
+  \end{frame}
 
-    \begin{frame}
-      \frametitle{aaaaaaaaaaa}
-        3) notre urlfilter, les choix que nous avons fait (et pourquoi), et
-        par exemple expliquer ce que permet la libnetfiter--conntrack.
-        \begin{itemize}
-          \item<1-> b
-          \item<2-> c
-          \item<3-> d
-        \end{itemize}
+  \begin{frame}
+    \frametitle{Fonctionnement du logiciel}
+      \begin{itemize}
+        \item<1-> Regrouper les paquets appartenant à une même connexion, grâce à l'utilisation de
+        \texttt{libnetfilter\_conntrack};
+        \item<2-> Déterminer si le contenu de la connexion correspond à un protocole supporté;
+        \item<3-> Extraire la méthode et l'url utilisées par le client des paquets;
+        \item<4-> Classifier et remonter l'information au noyau.
+      \end{itemize}
+  \end{frame}
 
-        \vspace{0.5cm}
-        \onslide<4>
-        \begin{center}
-          \begin{Large}
-            \textcolor{blue}{e.}
-          \end{Large}
-        \end{center}
-    \end{frame}
+  \begin{frame}
+    \frametitle{Fonctionnement du logiciel}
+      \begin{figure}[h]
+        \centering
+        \includegraphics[width=\textwidth]{schema2.png}\\
+        \title{Fonctionnement du module}
+      \end{figure}
+  \end{frame}
 
-  \subsection{Fonctionnement du logiciel}
+  \begin{frame}
+    \frametitle{Fonctionnement pratique}
+      \begin{itemize}
+        \item<1-> Le 1\ier{} thread écoute sur un \texttt{netfilter\_netlink}, reçoit les mises à jour de la table conntrack du
+        noyau et maintient une copie locale.
+        \item<2-> Le 2\ieme{} thread intercepte les paquets arrivant sur une
+        \texttt{NFQUEUE}, les parse, détermine l'entrée conntrack et récupère l'objet \og Connection \fg{}
+        correspondant, met à jour les deux buffers, puis appelle la méthode \texttt{update} du classifier avant d'accepter le
+        paquet, en le marquant.
+        \item<3-> Le classifier surveille les buffers d'une connexion et prend une décision.
+      \end{itemize}
+  \end{frame}
 
-  \subsection{Quelques remarques et comparaisons avec l7-filter}
+  \begin{frame}
+    \frametitle{Fiabilité et limitation}
+      \begin{itemize}
+        \item<1-> Le protocole ftp est géré correctement.
+        \item<2-> Les requêtes en \emph{Keep-Alive} dans l'http ne sont pas gérées.
+        \item<3-> L'application résiste nativement aux attaques de types \emph{Denial of Service}.
+      \end{itemize}
+  \end{frame}
