--- a/trunk/presentation/presentation.tex
+++ b/trunk/presentation/presentation.tex
@@ -17,7 +17,7 @@
     \titlepage
   \end{frame}
 
-  \section<presentation>[]{}
+  \section<presentation>{}
     \begin{frame}
       \frametitle{Introduction : les enjeux du filtrage applicatif}
     \end{frame}
