--- a/presentation/principes.tex
+++ b/presentation/principes.tex
@@ -2,79 +2,100 @@
   \begin{frame}
     \frametitle{Contexte: un filtre transparent}
     \begin{itemize}
-      \item<1> Filtrer du traffic (web) sans toucher aux connexions TCP.
-        % image filter-before.png
-      \item<2> Filtrer du traffic (web) sans toucher aux connexions TCP.
-        % image filter-after.png
+      \item<1-> Filtrer du traffic (web) sans toucher aux connexions TCP.\\
+        \only<1>{
+          \begin{figure}[h]
+            \includegraphics[width=0.8\textwidth]{pictures/filter-before.png}
+          \end{figure}
+        }
+        \only<2->{
+          \begin{figure}[h]
+            \includegraphics[width=0.8\textwidth]{pictures/filter-after.png}
+          \end{figure}
+        }
       \item<3-> Cas d'école: appliquer des règles de QoS restrictives sur les fichiers {\tt .pdf}.
       \item<4-> Hypothèse: l'un des coté est neutre (pas de complicité).
     \end{itemize}
   \end{frame}
 
-  \begin{frame}
+  \begin{frame}[t]
     \frametitle{Fonctionnement d'un filtre applicatif}
     Fonctionnement d'un filtre transparent au niveau 7 (OSI):
     \begin{itemize}
-      \item Identification et groupage des packets par session TCP.\\
-          {\tt\small [tcp src=129.104.201.51 dst=87.98.164.72 sport=4242 dport=80]} ou \\
-          {\tt\small [tcp src=87.98.164.72 dst=129.104.201.51 sport=80 dport=4242]}
-      \item Extraction du contenu des buffers egress/ingress.\\
-        {\tt\small > GET /abcd.pdf HTTP/1.0}\\
-        {\tt\small > Host: www.blih.org}\\
-        {\tt\small > }\\
-        {\tt\small < HTTP/1.1 200 OK}\\
-        ...
-      \item Détection du protocole utilisé.
-      \item Extraction des information (protocol buffer).\\
-        {\tt\small proto=HTTP, method=GET, url=/abcd.pdf}
-      \item Classification finale.\\
-        Exemple de règle: {\tt\small proto=HTTP method=GET url=.*\.pdf}
+      \item<1-> Identification et groupage des packets par session TCP.\\
+        \only<1>{\tt\scriptsize
+          <tcp src=129.104.201.51 dst=87.98.164.72 sport=4242 dport=80> et \\
+          <tcp src=87.98.164.72 dst=129.104.201.51 sport=80 dport=4242>
+        }
+      \item<2-> Extraction du contenu des buffers egress/ingress.\\
+        \only<2>{\tt\scriptsize
+          > GET /abcd.pdf HTTP/1.0\\
+          > Host: www.blih.org\\
+          > \\
+          < HTTP/1.1 200 OK\\
+          \dots
+        }
+      \item<3-> Détection du protocole utilisé.
+      \item<4-> Extraction des information (protocol buffer).\\
+        \only<4>{\tt\scriptsize
+          proto=HTTP, method=GET, url=/abcd.pdf
+        }
+      \item<5-> Classification finale.\\
+        \only<5>{
+          Exemple de règle: {\tt\scriptsize proto=HTTP method=GET url=.*$\backslash$.pdf}
+        }
     \end{itemize}
   \end{frame}
 
   \begin{frame}
     \frametitle{Attaques et contournement d'un filtre applicatif}
     \begin{itemize}
-      \item Contournement par fragmentation des paquets
-      \item Contournement par ré-arrangement des paquets TCP
-      \item Contournement par exploitation du protocole
-      \item Contournement par leurre du détecteur de protocole
-      \item Contournement par non-respect du protocole
+      \item Contournement via les couches 3/4 OSI.
+        \begin{itemize}
+          \item Fragmentation des paquets au niveau IP.
+          \item Ré-arrangement des paquets TCP.
+        \end{itemize}
+      \item Contournement via l'implémentation du protocole
+        \begin{itemize}
+          \item Contournement par exploitation du protocole
+          \item Contournement par leurre du détecteur de protocole
+          \item Contournement par non-respect du protocole
+        \end{itemize}
       \item Attaque \emph{Denial of Service} classique
     \end{itemize}
   \end{frame}
 
   \begin{frame}
-    \frametitle{Contournement par fragmentation des paquets}
+    \frametitle{Contournement par fragmentation des paquets}[t]
     Idée: utiliser le protocole IP pour casser ``l'atomicité'' des échanges.
     % FRAG flag, ou paquets à payload réduit.
   \end{frame}
 
   \begin{frame}
-    \frametitle{Contournement par ré-arrangement des paquets TCP}
+    \frametitle{Contournement par ré-arrangement des paquets TCP}[t]
     Idée: changer l'ordre des paquets TCP pour obfusquer le buffer \emph{egress}.
   \end{frame}
 
   \begin{frame}
-    \frametitle{Contournement par exploitation du protocole}
+    \frametitle{Contournement par exploitation du protocole}[t]
     Idée: exploiter des fonctionnalités obscures (ou pas) du protocole.
     % Keepalive
   \end{frame}
 
   \begin{frame}
-    \frametitle{Contournement par leurre du détecteur de protocole}
+    \frametitle{Contournement par leurre du détecteur de protocole}[t]
     Idée: comettre des erreurs récupérables de nature à leurrer le détecteur.
     % Commencer par une erreur en SMTP pour éviter le EHLO.
     % Utiliser des lignes de requete extremement longues, type /././././.....
   \end{frame}
 
   \begin{frame}
-    \frametitle{Contournement par non-respect du protocole}
+    \frametitle{Contournement par non-respect du protocole}[t]
     Idée: utiliser des \emph{flavor} peu-connues ou des tolérances du protocole.
     % Par exemple utiliser "GET <url>\n"
   \end{frame}
 
   \begin{frame}
-    \frametitle{Attaque \emph{Denial of Service} classique}
+    \frametitle{Attaque \emph{Denial of Service} classique}[t]
     Idée: exploiter les implémentations naïves du protocole.
   \end{frame}
