--- a/presentation/principes.tex
+++ b/presentation/principes.tex
@@ -66,36 +66,67 @@
   \end{frame}
 
   \begin{frame}
-    \frametitle{Contournement par fragmentation des paquets}[t]
-    Idée: utiliser le protocole IP pour casser ``l'atomicité'' des échanges.
-    % FRAG flag, ou paquets à payload réduit.
+    \frametitle{Contournement par fragmentation des paquets}
+    Idée: casser ``l'atomicité'' des échanges avec des petits paquets.
+    \begin{itemize}
+      \item<1-> Le protocole http est un protocole \emph{human readable}.
+      \item<2-> Une requête http normale passe dans un paquet TCP.\\
+        {\small C'est à dire que {\tt sizeof(requete + headers) <= max payload size}}
+      \item<3-> Implémentation naïve: filtrage par paquets.
+      \item<4-> Attaque:\\
+        {\scriptsize
+          Original: {\tt "GET /abcd.pdf HTTP/1.0"}\\
+          Modifié:  {\tt "GE" "T /abcd.pdf HTT" "P/1.0"}
+        }
+      \item<5-> Défense: utilisation de buffers egress/ingress pour la session TCP.
+    \end{itemize}
   \end{frame}
 
   \begin{frame}
-    \frametitle{Contournement par ré-arrangement des paquets TCP}[t]
-    Idée: changer l'ordre des paquets TCP pour obfusquer le buffer \emph{egress}.
+    \frametitle{Contournement par \emph{reordering} des paquets TCP}
+    Idée: réordonner les paquets TCP pour tromper le filtre.
+    \begin{itemize}
+      \item<1-> Support du réarrangement de paquets dans TCP.
+      \item<2-> Normalement:\\
+        {\tt\scriptsize
+          > pkt=1, payload="GET /abcd.pdf HTTP/1.0"
+        }
+      \item<3-> Après fragmentation:\\
+        {\tt\scriptsize
+          > pkt=1, payload="GE"\\
+          > pkt=2, payload="T /abcd.pdf HTT"\\
+          > pkt=3, payload="P/1.0"
+        }
+      \item<4-> Après re-arrangement:\\
+        {\tt\scriptsize
+          > pkt=1, payload="GE"\\
+          > pkt=3, payload="P/1.0"\\
+          > pkt=2, payload="T /abcd.pdf HTT"
+        }
+      \item<5-> Défense: rearrangement manuel, complexe, coûteux.
+    \end{itemize}
   \end{frame}
 
-  \begin{frame}
-    \frametitle{Contournement par exploitation du protocole}[t]
+  \begin{frame}[t]
+    \frametitle{Contournement par exploitation du protocole}
     Idée: exploiter des fonctionnalités obscures (ou pas) du protocole.
     % Keepalive
   \end{frame}
 
-  \begin{frame}
-    \frametitle{Contournement par leurre du détecteur de protocole}[t]
+  \begin{frame}[t]
+    \frametitle{Contournement par leurre du détecteur de protocole}
     Idée: comettre des erreurs récupérables de nature à leurrer le détecteur.
     % Commencer par une erreur en SMTP pour éviter le EHLO.
     % Utiliser des lignes de requete extremement longues, type /././././.....
   \end{frame}
 
-  \begin{frame}
-    \frametitle{Contournement par non-respect du protocole}[t]
+  \begin{frame}[t]
+    \frametitle{Contournement par non-respect du protocole}
     Idée: utiliser des \emph{flavor} peu-connues ou des tolérances du protocole.
     % Par exemple utiliser "GET <url>\n"
   \end{frame}
 
-  \begin{frame}
-    \frametitle{Attaque \emph{Denial of Service} classique}[t]
+  \begin{frame}[t]
+    \frametitle{Attaque \emph{Denial of Service} classique}
     Idée: exploiter les implémentations naïves du protocole.
   \end{frame}
