--- a/trunk/presentation/netfilter.tex
+++ b/trunk/presentation/netfilter.tex
@@ -31,12 +31,12 @@
     \frametitle{Iptables: Exemples}
     \begin{itemize}
     \item Filter: \\ 
-      \textrm{iptables -t filter -A INPUT -p tcp --dport 80 -j DROP}
+      {\tt\scriptsize iptables -t filter -A INPUT -p tcp --dport 80 -j DROP}
     \item Nat: \\
-      \textrm{iptables -t nat -A POSTROUTING -d ! 192.168.0.0/24 -j
+      {\tt\scriptsize iptables -t nat -A POSTROUTING -d ! 192.168.0.0/24 -j
       SNAT --to-source 81.57.230.21}
     \item Mangle: \\
-      \textrm{iptables -t mangle -A POSTROUTING -p udp --dport 53 -j TOS --set-tos 16}
+      {\tt\scriptsize iptables -t mangle -A POSTROUTING -p udp --dport 53 -j TOS --set-tos 16}
     \end{itemize}
   \end{frame}
 
@@ -68,8 +68,8 @@
     \frametitle{Notre choix}
     Application Userspace car:
     \begin{itemize}
-    \item Développement simplifiée et accès à des librairies
-    puissantes (notamment pour la gestion d'expression régulières).
+    \item Développement simplifié et accès à des librairies
+    puissantes (notamment pour la gestion d'expressions régulières).
     \item Pas de plantage système en cas de plantage de l'application
     \item Minimisation de l'impact d'une faille de sécurité éventuelle.
     \end{itemize}
