--- a/trunk/presentation/implementation.tex
+++ b/trunk/presentation/implementation.tex
@@ -52,6 +52,8 @@
       \begin{itemize}
         \item<1-> Le protocole ftp est géré correctement.
         \item<2-> Les requêtes en \emph{Keep-Alive} dans l'http ne sont pas gérées.
-        \item<3-> L'application résiste nativement aux attaques de types \emph{Denial of Service}.
+        \item<3-> Résitance native aux contournements par fragmentation de paquets, mais pas à celles par inversions de paquets.
+        \item<4-> L'application résiste nativement aux attaques de types \emph{Denial of Service}.
+        \item<5-> L'application supporte l'IPv6.
       \end{itemize}
   \end{frame}
